@startuml

title __TVDB's Class Diagram__\n

  package org.jamienicol.episodes {
    package org.jamienicol.episodes.tvdb {
      class Client {
          {static} - TAG : String
          {static} - baseUrl : String
          - apiKey : String
          - http : OkHttpClient
          + Client()
          + searchShows()
          + getShow()
      }
    }
  }
  

  package org.jamienicol.episodes {
    package org.jamienicol.episodes.tvdb {
      class Episode {
          - id : int
          - name : String
          - overview : String
          - episodeNumber : int
          - seasonNumber : int
          - firstAired : Date
          + Episode()
          + getId()
          + setId()
          + getName()
          + setName()
          + getOverview()
          + setOverview()
          + getEpisodeNumber()
          + setEpisodeNumber()
          + getSeasonNumber()
          + setSeasonNumber()
          + getFirstAired()
          + setFirstAired()
      }
    }
  }
  

  package org.jamienicol.episodes {
    package org.jamienicol.episodes.tvdb {
      class GetShowParser {
          {static} - TAG : String
          + parse()
      }
    }
  }
  

  package org.jamienicol.episodes {
    package org.jamienicol.episodes.tvdb {
      class SearchShowsParser {
          {static} - TAG : String
          ~ parsed : List<Show>
          + parse()
      }
    }
  }
  

  package org.jamienicol.episodes {
    package org.jamienicol.episodes.tvdb {
      class Show {
          - id : int
          - name : String
          - language : String
          - overview : String
          - firstAired : Date
          - bannerPath : String
          - fanartPath : String
          - posterPath : String
          - episodes : List<Episode>
          + Show()
          + getId()
          + setId()
          + getName()
          + setName()
          + getLanguage()
          + setLanguage()
          + getOverview()
          + setOverview()
          + getFirstAired()
          + setFirstAired()
          + getBannerPath()
          + setBannerPath()
          + getFanartPath()
          + setFanartPath()
          + getPosterPath()
          + setPosterPath()
          + getEpisodes()
          + setEpisodes()
      }
    }
  }
  

  GetShowParser o-- Show : show
  GetShowParser o-- Episode : episode
  SearchShowsParser o-- Show : current


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
